# pydis_lib

./: .gitignore  LICENSE  README.md  errors.py  identifier.json  main.py  pyproject.toml  test.py
pydis/: __init__.py  client.py  gateway.py  message.py
pydis/resources/: __init__.py  errors.py  utils.py
tests/: test.py
