[tool.poetry]
name = "pydis"
version = "0.1.0"
description = "Is an asynchronous library wrapping discord api and is used strictly for events and interactions."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
